@@ -5,6 +5,6 @@ import org.zalando.problem.Status;
 
 public class RoleNotFoundException extends AbstractThrowableProblem {
     public RoleNotFoundException(String role) {
-        super(null, "Role not found", Status.NOT_FOUND, String.format("Role not found: %s", role));
+        super(null, "Role not found", Status.NOT_FOUND, "Role not found: %s.".formatted(role));
     }
 }
